htdocs/style.css
html, 
body {
    background: #3aafa9;
    font-family: "Open Sans", Arial, sans-serif;
    font-size: 62.5%;
    scroll-behavior: smooth;
    line-height: 1.5;
    min-width: 290px;
}

a {
    color: #def2f1;
}

h1, header {
    font-size: 2.5rem;
    font-weight: bold;
}

h2 {
    font-size: 1.8rem;
}

code {
    background: #def2f1;
    border-radius: 5px;
    color: #666;
    font-family: monospace;
    font-size: 1.5rem;
    padding: 1px;
    white-space: pre;
}

pre {
    background: #def2f1;
    border-radius: 5px;
    border-left: 5px solid #2b7a78;
    display: block;
    line-height: 1.5;
    padding-left: 5px;
    max-width: 50%;
    overflow: auto;
    page-break-inside: avoid;
    position: relative;
    tab-size: 2;
    white-space: pre-wrap;
    word-wrap: break-word;
}

img {
    border-radius: 5px;
}

#navbar {
    background-color: #2b7a78;
    font-size: 1.8rem;
    position: fixed;
    min-width: 290px;
    top: 0px;
    left: 0px;
    width: 300px;
    height: 100%;
}

#navbar a {
    display: block;
    padding: 10px 30px;
    color: #def2f1;
    text-decoration: none;
    cursor: pointer;
}

#navbar a:hover {
    background: #3aafa9;
}

#navbar ul {
    list-style: none;
    height: 88%;
    padding: 0;
    overflow-y: auto;
    overflow-x: hidden;
}

#main-doc {
    background-color: #3aafa9;
    font-size: 1.8rem;
    position: absolute;
    margin-left: 310px;
    padding: 20px;
    margin-bottom: 110px;
    overflow-wrap: normal;
    justify-content: flex-start;
    text-justify: auto;
}

@media only screen and (max-width: 815px) {
    /* For mobile phones: */
    #navbar ul {
        height: 450px;
    }
  
    #navbar {
        position: absolute;
        top: 0;
        padding: 0;
        margin: 0;
        width: 100%;
        max-height: 450px;
        z-index: 1;
    }

    #main-doc {
        position: relative;
        margin-left: 0px;
        margin-top: 450px;
    }
}
  
@media only screen and (max-width: 400px) {
    #main-doc {
        margin-left: -10px;
    }
    code {
        margin-left: -20px;
        width: 100%;
        padding: 15px;
        padding-left: 10px;
        padding-right: 45px;
        min-width: 233px;
    }
}

